objects/ssot__PayGradeStepLocation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__HourlyBasicRateAmount__c</fullName>
        <label>Hourly Basic Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HourlyOvertimeRateAmount__c</fullName>
        <label>Hourly Overtime Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Pay Grade Step Location Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumAnnualSalaryAmount__c</fullName>
        <label>Maximum Annual Salary</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumAnnualSalaryAmount__c</fullName>
        <label>Minimum Annual Salary</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PayGradeStepId__c</fullName>
        <label>Pay Grade Step</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366666406_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PayGradeStepLocation_LocationId_map__rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>PayGradeStepLocation_LocationId_map__rel</relationshipLabel>
        <relationshipName>rel_1727366666406_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366707966_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PayGradeStepLocation_PayGradeStepId__rel</label>
        <referenceTo>ssot__PayGradeStep__dlm</referenceTo>
        <relationshipLabel>PayGradeStepLocation_PayGradeStepId__rel</relationshipLabel>
        <relationshipName>rel_1727366707966_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>